--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Felicity Jones</title>
+    <title>Renan Ferreira</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Curriculum vitae Felicity Jones" />
     <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/animate.css" type="text/css">
     <link rel="stylesheet" href="css/transition-animations.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/main-green.css" type="text/css">
     <script src="js/jquery-2.1.3.min.js"></script>
@@ -35,7 +38,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Felicity <span>Jones</span></div></a>
+            <a href="index.html#home"><div class="site-title">Renan <span>Ferreira</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -65,7 +68,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Felicity Jones</div>
+          <div class="mobile-site-title">Renan Ferreira</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -94,21 +97,20 @@
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Felicity Jones</h1>
+                        <h1>Renan Ferreira</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Web Designer</div>
+                            <div class="sp-subtitle"></div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Frontend-developer</div>
+                            <div class="sp-subtitle">Desenvolvedor</div>
                           </div>
                         </div>
                       </div>
 
-                      <div class="social-links">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                      <div class="social-links">                        
+                        <a href="https://github.com/meiotera" target="_blank"><i class="bi bi-github"></i></a>
+                        <a href="https://www.instagram.com/renan_crwebtec/?next=%2F" target="_blank"><i class="fa fa-instagram"></i></a>
                       </div>
                     </div>
                   </div>
@@ -122,7 +124,7 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá! Eu sou a Felicity Jones. Gosto de gatos, video games e programação. Aqui você irá encontrar algumas outras
+                        <p>Olá! Eu sou a Renan Ferreira. Sou estudante de programação. Aqui você irá encontrar algumas outras
                         informações sobre mim.</p>
                       </div>
                       <div class="download-resume">
@@ -132,11 +134,11 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">29</span></li>
-                        <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
-                        <li><span class="title">Cidade/Estado</span><span class="value">São Paulo, SP</span></li>
-                        <li><span class="title">E-mail</span><span class="value">felicity@geekuniversity.com.br</span></li>
-                        <li><span class="title">Fone</span><span class="value">+5511 123 456 789</span></li>
+                        <li><span class="title">Idade</span><span class="value">35</span></li>
+                        <li><span class="title">Nacionalidade</span><span class="value">Brasileiro</span></li>
+                        <li><span class="title">Cidade/Estado</span><span class="value">Mossoró - RN</span></li>
+                        <li><span class="title">E-mail</span><span class="value">renanfc.re@gmail.com</span></li>
+                        <li><span class="title">Fone</span><span class="value">(84)9 96063044</span></li>
                         <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
                       </ul>
                     </div>
@@ -156,7 +158,7 @@
                 <div class="page-content">
 
                   <div class="row">
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="block-title">
                           <h3>Educação</h3>
@@ -165,125 +167,42 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Bootstrap 5</h4>
+                            <span class="item-period">2022</span>
+                            <span class="item-small"></span>
+                            <p class="item-description">Bootstrap 5 do básico ao avançado</p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">HTML 5 e CSS 3</h4>
+                            <span class="item-period">2022</span>
+                            <span class="item-small"></span>
+                            <p class="item-description">Frontend-developer</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Javascript</h4>
+                            <span class="item-period">2022</span>
+                            <span class="item-small"></span>
+                            <p class="item-description">Javascript pela B7 Web </p>
                           </div>
                           <!-- / Education 3 -->
+                          <div class="timeline-item">
+                            <h4 class="item-title">Git e GitHub</h4>
+                            <span class="item-period">2023</span>
+                            <span class="item-small"></span>
+                            <p class="item-description">Conhecimentos de Git e GitHub, pela Geek UniversityBR</p>
+                          </div>
                         </div>
                       </div>
-                    </div>
-
-                    <div class="col-sm-6 col-md-6 col-lg-6">
-                      <div class="block">
-                        <div class="block-title">
-                          <h3>Experiência Profissional</h3>
-                        </div>
-
-                        <div class="timeline">
-                          <!-- Experience 1 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Frontend-developer</h4>
-                            <span class="item-period">Dec 2012 - Current</span>
-                            <span class="item-small">Web Agency</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
-                          <!-- / Experience 1 -->
-
-                          <!-- Experience 2 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Web Designer</h4>
-                            <span class="item-period">Dec 2011 - Nov 2012</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
-                          <!-- / Experience 2 -->
-
-                          <!-- Experience 3 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Graphic Designer</h4>
-                            <span class="item-period">Jan 2010 - Dec 2011</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
-                          </div>
-                          <!-- / Experience 3 -->
-                        </div>
-                      </div>
-                    </div>
+                    </div>                    
                   </div>
 
-                  <div class="row">
-                    <div class="col-sm-6 col-md-6 col-lg-6">
-                      <div class="block">
-                        <div class="block-title">
-                          <h3>Design <span>Skills</span></h3>
-                        </div>
-
-                        <div class="skills-info">
-                          <h4>Web Design</h4>                               
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-1"></div>
-                          </div>
-
-                          <h4>Graphic Design</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-2"></div>
-                          </div>
-
-                          <h4>Print Design</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-3"></div>
-                          </div> 
-                        </div>
-
-                      </div>
-                    </div>
-
-                    <div class="col-sm-6 col-md-6 col-lg-6">
-                      <div class="block">
-                        <div class="block-title">
-                          <h3>Coding <span>Skills</span></h3>
-                        </div>
-
-                        <div class="skills-info">
-                          <h4>HTML5</h4>                               
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-4"></div>
-                          </div>
-
-                          <h4>CSS3/LESS/SASS</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-5"></div>
-                          </div>
-
-                          <h4>jQuery</h4>
-                          <div class="skill-container">
-                            <div class="skill-percentage skill-6"></div>
-                          </div> 
-                        </div>
-                        
-                      </div>
-                    </div>
-                  </div>
+                
 
                   <!-- Download Resume Button -->
                   <div class="row">
@@ -715,7 +634,7 @@
       <!-- /Main Content -->
     </div>
     <footer>
-      <div class="copyrights">&copy; Geek University</div>
+      <div class="copyrights">&copy; Renan Ferreira </div>
     </footer>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/pages-switcher.js"></script>
