Adicionado Faculdade em curriculo

--- a/index.html
+++ b/index.html
@@ -197,6 +197,13 @@
                             <span class="item-small"></span>
                             <p class="item-description">Conhecimentos de Git e GitHub, pela Geek UniversityBR</p>
                           </div>
+
+                          <div class="timeline-item">
+                            <h4 class="item-title">Análise e desenvolvimento de sistemas</h4>
+                            <span class="item-period">Cursando</span>
+                            <span class="item-small"></span>
+                            <p class="item-description">Uninabuco</p>
+                          </div>
                         </div>
                       </div>
                     </div>                    
