Adicionado link Home ao clicar no nome

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="subpages">
 
             <!-- Home Subpage -->
-            <section class="pt-page" data-id="home">
+            <section class="pt-page" data-id="home" id="home">
               <div class="section-inner start-page-content">
                 <div class="page-header">
                   <div class="row">
