Alterado cor Link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Renan Ferreira</div>
+          <div class="mobile-site-title"><a href="index.html#home">Renan Ferreira</a></div>
         </div>
 
         <a class="menu-toggle mobile-visible">
